[gd_scene load_steps=7 format=3 uid="uid://dyl0i5ahx3my3"]

[ext_resource type="Script" path="res://Scripts/other/radiation.gd" id="1_7jm1v"]

[sub_resource type="BoxShape3D" id="BoxShape3D_04r7v"]
size = Vector3(4.38691, 1, 3.87167)

[sub_resource type="BoxShape3D" id="BoxShape3D_v54p4"]
size = Vector3(13.8471, 1, 12.9275)

[sub_resource type="BoxShape3D" id="BoxShape3D_7c5h1"]
size = Vector3(19.6046, 1, 20.6213)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_xncak"]
albedo_color = Color(0, 0.784314, 0.670588, 1)
metallic = 1.0
metallic_specular = 1.0
roughness = 0.27
emission = Color(0.290196, 0.290196, 0.290196, 1)
rim_tint = 1.0
billboard_mode = 1

[sub_resource type="SphereMesh" id="SphereMesh_5oucv"]
material = SubResource("StandardMaterial3D_xncak")

[node name="radiation" type="StaticBody3D"]
script = ExtResource("1_7jm1v")

[node name="high_radiation" type="Area3D" parent="."]
collision_layer = 9
collision_mask = 9

[node name="CollisionShape3D" type="CollisionShape3D" parent="high_radiation"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.364384, 0, 0.0740395)
shape = SubResource("BoxShape3D_04r7v")

[node name="middle_radiation" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="middle_radiation"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.386305, 0, 0.0927439)
shape = SubResource("BoxShape3D_v54p4")

[node name="small_radiation" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="small_radiation"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.38862, 0, 0.00597382)
shape = SubResource("BoxShape3D_7c5h1")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.376312, 1.0042, 0)
mesh = SubResource("SphereMesh_5oucv")

[connection signal="area_entered" from="high_radiation" to="." method="_on_high_radiation_area_entered"]
[connection signal="area_exited" from="high_radiation" to="." method="_on_high_radiation_area_exited"]
[connection signal="area_entered" from="middle_radiation" to="." method="_on_middle_radiation_area_entered"]
[connection signal="area_exited" from="middle_radiation" to="." method="_on_middle_radiation_area_exited"]
[connection signal="area_entered" from="small_radiation" to="." method="_on_small_radiation_area_entered"]
[connection signal="area_exited" from="small_radiation" to="." method="_on_small_radiation_area_exited"]
